fixed x tour on mobile

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -59,6 +59,16 @@ a:active {
   font-weight: inherit;
 }
 
+.about-service-link:link,
+.about-service-link:visited,
+.about-service-link:hover,
+.about-service-link:active {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 0.2em;
+  cursor: pointer;
+}
+
 button {
   border: none;
   background-color: inherit;
