--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -38,7 +38,7 @@
     padding-left: 12px;
   }
 
-  .modal-tours .modal-close {
+  .commercial-page .modal-tours .modal-close {
     top: 0;
     right: 0;
   }
